# nagiosBackupCheck

./: README.rst  pyproject.toml
cli_check_backups/: cli.py
tests/: test_cli_check_backups.py
