[tool.poetry]
name = "cli-check-backups"
version = "0.1.0"
description = ""
authors = ["Pawel Dulak <pawel.dulak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
funcy = "^1.16"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
